# cmake-base

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
